--- a/web/index.html
+++ b/web/index.html
@@ -5,23 +5,18 @@
 <title>pilight webgui</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-<meta http-equiv="cache-control" content="max-age=0" />
-<meta http-equiv="cache-control" content="no-cache" />
-<meta http-equiv="expires" content="0" />
-<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
-<meta http-equiv="pragma" content="no-cache" />
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+<script type="text/javascript" src="jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="jquery.mobile-1.3.2.min.js"></script>
+<script type="text/javascript" src="pilight.js"></script>
+<link rel="stylesheet" href="jquery.mobile-1.3.2.min.css" />
 <link rel="stylesheet" href="pilight.css" />
 <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-iphone.png" />
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-ipad.png" />
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-iphone-retina-display.png" />
-<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-<script src="pilight.js"></script>
 </head>
 <body>
 <div data-role="page" id="p1">
-	<div data-role="header" data-theme="b"><h1>pilight webgui</h1></div> 
+	<div data-role="header" data-theme="b"><p id="version"></p><h1>pilight webgui</h1></div> 
 	<div data-role="navbar" id="tabs"></div>
 	<div data-role="content" id="content"></div>
 </div>
