--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>pilight webgui</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<meta name="viewport" content="initial-scale=1, maximum-scale=1">
+<meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width">
 <script type="text/javascript" src="jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="jquery.mobile-1.3.2.min.js"></script>
 <script type="text/javascript" src="pilight.js"></script>
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div data-role="page" id="p1">
-	<div data-role="header" data-theme="b"><p id="version"></p><h1>pilight webgui</h1></div> 
+	<div data-role="header" id="header" data-theme="b"><div id="version"></div><h1>pilight webgui</h1></div> 
 	<div data-role="navbar" id="tabs"></div>
 	<div data-role="content" id="content"></div>
 </div>
