--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,8 @@
 <title>pilight webgui</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width">
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
 <script type="text/javascript" src="jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="jquery.mobile-1.3.2.min.js"></script>
 <script type="text/javascript" src="pilight.js"></script>
@@ -13,6 +15,7 @@
 <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-iphone.png" />
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-ipad.png" />
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-iphone-retina-display.png" />
+<link rel="shortcut icon" sizes="196x196" href="apple-touch-icon-iphone-retina-display-hr.png">
 </head>
 <body>
 <div data-role="page" id="p1">
