--- a/web/default/index.html
+++ b/web/default/index.html
@@ -9,9 +9,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <script type="text/javascript" src="jquery-2.0.2.min.js"></script>
 <script type="text/javascript" src="jquery.mobile-1.3.2.min.js"></script>
-<!--<script type="text/javascript" src="esponsiveImg.js"></script>-->
+<script type="text/javascript" src="esponsiveImg.js"></script>
 <script type="text/javascript" src="pilight.js"></script>
-<!--<link rel="stylesheet" href="jquery.mobile-1.3.2.min.css" />-->
+<link rel="stylesheet" href="jquery.mobile-1.3.2.min.css" />
 <link rel="stylesheet" href="pilight.css" />
 <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-iphone.png" />
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-ipad.png" />
