--- a/web/default/index.html
+++ b/web/default/index.html
@@ -11,8 +11,8 @@
 <script type="text/javascript" src="jquery.mobile-1.3.2.min.js"></script>
 <script type="text/javascript" src="esponsiveImg.js"></script>
 <script type="text/javascript" src="pilight.js"></script>
-<link rel="stylesheet" href="jquery.mobile-1.3.2.min.css" />
-<link rel="stylesheet" href="pilight.css" />
+<!--<link rel="stylesheet" href="jquery.mobile-1.3.2.min.css" />
+<link rel="stylesheet" href="pilight.css" />-->
 <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-iphone.png" />
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-ipad.png" />
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-iphone-retina-display.png" />
