--- a/web/default/index.html
+++ b/web/default/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="manifest.appcache">
+<html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>pilight webgui</title>
