--- a/web/default/index.html
+++ b/web/default/index.html
@@ -9,6 +9,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <script type="text/javascript" src="jquery-2.0.2.min.js"></script>
 <script type="text/javascript" src="jquery.mobile-1.3.2.min.js"></script>
+<script type="text/javascript" src="moment.min.js"></script>
 <script type="text/javascript" src="pilight.js"></script>
 <link rel="stylesheet" href="jquery.mobile-1.3.2.min.css" />
 <link rel="stylesheet" href="pilight.css" />
@@ -19,7 +20,7 @@
 </head>
 <body>
 <div data-role="page" id="p1">
-	<div data-role="header" id="header" data-theme="b"><div id="version"></div><h1>pilight webgui</h1></div> 
+	<div data-role="header" id="header" data-theme="b"><div id="version"></div><h1>pilight webgui</h1></div>
 	<div data-role="navbar" id="tabs"></div>
 	<div data-role="content" id="content"></div>
 </div>
