Made cpu usage more accurate and added it to the webgui

--- a/web/default/index.html
+++ b/web/default/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <div data-role="page" id="p1">
-	<div data-role="header" id="header" data-theme="b"><div id="version"></div><h1>pilight webgui</h1></div>
+	<div data-role="header" id="header" data-theme="b"><div id="version"></div><div id="proc">CPU: ..% / RAM: ..%</div><h1>pilight webgui</h1></div>
 	<div data-role="navbar" id="tabs"></div>
 	<div data-role="content" id="content"></div>
 </div>
