Added jquery-migrate to support jquery v3 >

--- a/libs/webgui/index.html
+++ b/libs/webgui/index.html
@@ -9,6 +9,7 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <script type="text/javascript" src="jquery.min.js"></script>
+<script type="text/javascript" src="jquery-migrate.js"></script>
 <script type="text/javascript" src="jquery.mobile.min.js"></script>
 <script type="text/javascript" src="moment.min.js"></script>
 <script type="text/javascript" src="pilight.js"></script>
