webgui: Restructure for clarity
Move all images into images/ directory and update related files

--- a/libs/webgui/index.html
+++ b/libs/webgui/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>pilight webgui</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 <meta http-equiv="x-ua-compatible" content="IE=edge" >
 <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width">
 <meta name="mobile-web-app-capable" content="yes">
@@ -15,10 +15,10 @@
 <link rel="stylesheet" href="jquery.mobile-1.4.5.min.css" />
 <link rel="stylesheet" href="pilight.css" />
 <link rel="stylesheet" href="pilight.jquery.theme.css" />
-<link rel="apple-touch-icon-precomposed" href="apple-touch-icon-iphone.png" />
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-ipad.png" />
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-iphone-retina-display.png" />
-<link rel="shortcut icon" sizes="196x196" href="apple-touch-icon-iphone-retina-display-hr.png">
+<link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon-iphone.png" />
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/apple-touch-icon-ipad.png" />
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/apple-touch-icon-iphone-retina-display.png" />
+<link rel="shortcut icon" sizes="196x196" href="images/apple-touch-icon-iphone-retina-display-hr.png">
 </head>
 <body>
 <div data-role="page" id="p1">
